--- a/drawandsave1.html
+++ b/drawandsave1.html
@@ -14,7 +14,7 @@
 <canvas id="drawCanvas" width="800px" height="600px" style="border:#666; border-width:medium; border-style:solid;" ></canvas>
 </div>
 <a href="#" onClick="saveImage()">Save Image</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-<a href="images/screengrabs/saved_canvas.png" target="new">View Image</a>&nbsp;&nbsp;|&nbsp;&nbsp;
+<a href="saved_canvas.png" target="new">View Image</a>&nbsp;&nbsp;|&nbsp;&nbsp;
 <a href="#" onClick="clearCanvas()">Clear Canvas</a>
 <script type="text/javascript" src="../js/jquery.min.js"></script>
 <script type="text/javascript" src="drawandsave.js"></script>
